; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/most/dim2/extr_hal.c_check_packet_length.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/most/dim2/extr_hal.c_check_packet_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CDT3_BD_ISOC_MASK = common dso_local global i64 0, align 8
@ISOC_DBR_FACTOR = common dso_local global i64 0, align 8
@CDT1_BS_ISOC_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @check_packet_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_packet_length(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* @CDT3_BD_ISOC_MASK, align 8
  %6 = add nsw i64 %5, 1
  %7 = load i64, i64* @ISOC_DBR_FACTOR, align 8
  %8 = sdiv i64 %6, %7
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %3, align 8
  %10 = icmp sle i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

12:                                               ; preds = %1
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = icmp sgt i64 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %24

17:                                               ; preds = %12
  %18 = load i64, i64* %3, align 8
  %19 = sub nsw i64 %18, 1
  %20 = load i64, i64* @CDT1_BS_ISOC_MASK, align 8
  %21 = icmp sgt i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %24

23:                                               ; preds = %17
  store i32 1, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %22, %16, %11
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
